[gd_scene load_steps=14 format=3 uid="uid://eks4w0v1m1k4"]

[ext_resource type="Texture2D" uid="uid://4w4r42ko28ls" path="res://assets/gui/gui_background.png" id="1_222in"]
[ext_resource type="Script" uid="uid://bd2i68ggnhch0" path="res://scenes/pause_menu/pause_menu.gd" id="1_u1spl"]
[ext_resource type="FontFile" uid="uid://b7vkyxnsa7dol" path="res://assets/fonts/Sunset Friday.otf" id="2_u1spl"]
[ext_resource type="Theme" uid="uid://bprhvkas7epw0" path="res://scenes/options_scene/volume_slider_theme.tres" id="3_81oag"]
[ext_resource type="Texture2D" uid="uid://ctxq4r0wwlfnk" path="res://assets/gui/check_icon.png" id="4_jbycf"]
[ext_resource type="Texture2D" uid="uid://cn2o0d8uq31x7" path="res://assets/gui/check_icon_empty.png" id="5_4nxxr"]
[ext_resource type="Texture2D" uid="uid://by5l62r3qn7fj" path="res://assets/gui/check_icon_disabled.png" id="6_hrixu"]
[ext_resource type="Texture2D" uid="uid://b7017a0fw0o23" path="res://assets/gui/check_icon_empty_disabled.png" id="7_lgojb"]
[ext_resource type="LabelSettings" uid="uid://dq0c6lirq23a0" path="res://assets/fonts/heading_label.tres" id="8_yflsd"]
[ext_resource type="Texture2D" uid="uid://dogtp5dbjim3t" path="res://assets/gui/button_1.png" id="9_qsjx2"]
[ext_resource type="Texture2D" uid="uid://vfm1p832dp0b" path="res://assets/gui/button_1_hover.png" id="10_jx4op"]
[ext_resource type="LabelSettings" uid="uid://cn1rdmmbnmsu3" path="res://assets/gui/button_font.tres" id="11_yacue"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kj01n"]

[node name="PauseMenu" type="Control"]
process_mode = 3
z_index = 4096
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u1spl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.41568628)

[node name="OptionsBG" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = -241.5
offset_right = 236.0
offset_bottom = 263.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_222in")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="MarginContainer" type="MarginContainer" parent="OptionsBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 70
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="OptionsVbox" type="VBoxContainer" parent="OptionsBG/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="AudioSettingContainer" type="VBoxContainer" parent="OptionsBG/MarginContainer/OptionsVbox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AudioTitleLabel" type="Label" parent="OptionsBG/MarginContainer/OptionsVbox/AudioSettingContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u1spl")
theme_override_font_sizes/font_size = 30
text = "Audio Settings"

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsBG/MarginContainer/OptionsVbox/AudioSettingContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="OptionsBG/MarginContainer/OptionsVbox/AudioSettingContainer/HBoxContainer"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u1spl")
theme_override_font_sizes/font_size = 22
text = "Primary Volume"

[node name="PrimaryVolume" type="HSlider" parent="OptionsBG/MarginContainer/OptionsVbox/AudioSettingContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_81oag")
max_value = 1.0
step = 0.05

[node name="PrimaryValueLabel" type="Label" parent="OptionsBG/MarginContainer/OptionsVbox/AudioSettingContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u1spl")
theme_override_font_sizes/font_size = 16
text = "(50%)"

[node name="HBoxContainer2" type="HBoxContainer" parent="OptionsBG/MarginContainer/OptionsVbox/AudioSettingContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="OptionsBG/MarginContainer/OptionsVbox/AudioSettingContainer/HBoxContainer2"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u1spl")
theme_override_font_sizes/font_size = 22
text = "Music Volume"

[node name="MusicVolume" type="HSlider" parent="OptionsBG/MarginContainer/OptionsVbox/AudioSettingContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_81oag")
max_value = 1.0
step = 0.05

[node name="MusicValueLabel" type="Label" parent="OptionsBG/MarginContainer/OptionsVbox/AudioSettingContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u1spl")
theme_override_font_sizes/font_size = 16
text = "(50%)"

[node name="HBoxContainer3" type="HBoxContainer" parent="OptionsBG/MarginContainer/OptionsVbox/AudioSettingContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Label" type="Label" parent="OptionsBG/MarginContainer/OptionsVbox/AudioSettingContainer/HBoxContainer3"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u1spl")
theme_override_font_sizes/font_size = 22
text = "SFX Volume"

[node name="SFXVolume" type="HSlider" parent="OptionsBG/MarginContainer/OptionsVbox/AudioSettingContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("3_81oag")
max_value = 1.0
step = 0.05

[node name="SFXValueLabel" type="Label" parent="OptionsBG/MarginContainer/OptionsVbox/AudioSettingContainer/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u1spl")
theme_override_font_sizes/font_size = 16
text = "(50%)"

[node name="GameSettingsContainer" type="VBoxContainer" parent="OptionsBG/MarginContainer/OptionsVbox"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="GameLabel" type="Label" parent="OptionsBG/MarginContainer/OptionsVbox/GameSettingsContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_u1spl")
theme_override_font_sizes/font_size = 30
text = "Game Settings"

[node name="SandboxCheck" type="CheckBox" parent="OptionsBG/MarginContainer/OptionsVbox/GameSettingsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/h_separation = 10
theme_override_fonts/font = ExtResource("2_u1spl")
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxEmpty_kj01n")
theme_override_icons/checked = ExtResource("4_jbycf")
theme_override_icons/unchecked = ExtResource("5_4nxxr")
theme_override_icons/checked_disabled = ExtResource("6_hrixu")
theme_override_icons/unchecked_disabled = ExtResource("7_lgojb")
text = "Sandbox Mode"

[node name="OptionsTitleBG" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -165.0
offset_top = -280.0
offset_right = 162.0
offset_bottom = -187.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_222in")
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="OptionsLabel" type="Label" parent="OptionsTitleBG"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Settings"
label_settings = ExtResource("8_yflsd")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TitleButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 483.0
offset_top = 552.0
offset_right = 955.0
offset_bottom = 739.0
scale = Vector2(0.67138535, 0.67138535)
texture_normal = ExtResource("9_qsjx2")
texture_hover = ExtResource("10_jx4op")

[node name="Label" type="Label" parent="TitleButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -29.0
offset_right = 74.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
text = "Save & Close"
label_settings = ExtResource("11_yacue")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 965.0
offset_top = 603.0
offset_right = 1437.0
offset_bottom = 790.0
scale = Vector2(0.67138535, 0.67138535)
texture_normal = ExtResource("9_qsjx2")
texture_hover = ExtResource("10_jx4op")

[node name="Label" type="Label" parent="QuitButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -29.0
offset_right = 74.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
text = "To Title"
label_settings = ExtResource("11_yacue")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ToTitleWarningTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="ToTitleWarningTimer" to="." method="_on_to_title_warning_timer_timeout"]
